# StreamShape

./: .example.env  .gitignore  CHANGELOG_RESPONSE_FORMAT.md  DOCUMENTATION_FIXES.md  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
docs/: CHANGELOG_STREAMING_USAGE.md  MIGRATION_STREAMING_USAGE.md  README.md  api-reference.md  best-practices.md  error-handling.md  examples.md  installation.md  litellm-provider.md  output-formats.md  providers.md  quickstart.md  usage.md
example/: README.md  all_methods_usage.py  litellm_general_usage.py  streaming_structured_output_usage.py  structured_output_usage.py
real_use/: all_methods_usage.py  streaming_structured_output_usage.py
src/: __init__.py  base.py  litellm_integration.py  parser_integration.py  providers.py
src/streamshape/: __init__.py  base.py  exceptions.py  litellm_integration.py  parser_integration.py  providers.py
src/streamshape/streaming_structured_output_parser/: parse_llm_output.py
tests/: test_base_provider.py  test_normalizer.py  test_streaming_structered_output.py
tests/mock_outputs/: README.md  mock_data.py
tests/mock_outputs/output_response/: __init__.py  anthropic_mock_response.py  google_mock_response.py  openai_mock_response.py
tests/mock_outputs/raw_data/anthropic/: simple_text.json  streaming.json  streaming_structured_output.json  streaming_tool_call.json  structured_output.json  tool_call.json
tests/mock_outputs/raw_data/google/: simple_text.json  streaming.json  streaming_tool_call.json  (+3 more)
tests/mock_outputs/tests/: test_claude_schema.py
(+10 files in other folders)
